clusters/my-cluster/demo-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-cluster
spec: 
  type: ClusterIP
  ports:
    - port: 7070
      targetPort: 80 
  selector:
    app: demo-app
