clusters/my-cluster/demo-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: my-cluster.com
      http:
        paths:
          - pathType: prefix
            path: / 
            backend:
              service:
                name: my-service
                port:
                  number: 7070
